--- a/contato.html
+++ b/contato.html
@@ -60,7 +60,7 @@
 
             <label class="checkbox"><input type="checkbox">Gostaria de receber nossas novidades por E-mail?</label>
 
-            <input type="submit" value="Enviar formulário">
+            <input type="submit" value="Enviar formulário" class="enviar">
 
         </form>
     </main>
