--- a/contato.html
+++ b/contato.html
@@ -51,7 +51,7 @@
 
             <div>
                <p>Qual horario prefere ser atendido?</p>
-               <select>
+               <select >
                  <option>Manhã</option>
                  <option>Tarde</option>
                  <option>Noite</option>
@@ -62,7 +62,32 @@
 
             <input type="submit" value="Enviar formulário" class="enviar">
 
-        </form>
+            </form>
+
+            <table>
+      <thead>
+              <tr>
+                <td>Dia</td>
+                <td>Horário</td>
+              </tr>
+       </thead>
+       <tbody>
+              <tr>
+                <td>Segunda</td>
+                <td>8h ~ 20h</td>
+              </tr>
+
+              <tr>
+                <td>Terça</td>
+                <td>8h ~ 20h</td>
+              </tr>
+
+              <tr>
+                <td>Quarta</td>
+                <td>8h ~ 20h</td>
+              </tr>
+        </tbody>
+            </table>
     </main>
    
     <footer>
